Now All data Collect In First Responce Bug Fix